RDCC-3872 fixed QA issues